new handler to get visit metrics for the link
